New program 'spit'.
* gettext-tools/machine-translation/README: New file.
* gettext-tools/machine-translation/prototype/README: New file.
* gettext-tools/machine-translation/prototype/OllamaSpit.java: New file.
* gettext-tools/machine-translation/prototype/ollama-spit.c: New file.
* gettext-tools/machine-translation/prototype/ollama-spit.go: New file.
* gettext-tools/machine-translation/prototype/ollama-spit.py: New file.
* gettext-tools/machine-translation/prototype/ollama-spit.sh: New file.
* gettext-tools/configure.ac (INCJSON_C, LIBJSON_C, INCCURL, LIBCURL): New
variables.
(BUILD_SPIT_IN_C): New conditional.
(AC_CONFIG_FILES): Add src/spit.py.
* gettext-tools/src/country-table.h: New file.
* gettext-tools/src/country-table.c: New file.
* gettext-tools/src/spit.c: New file.
* gettext-tools/src/spit.py.in: New file.
* gettext-tools/src/FILES: Mention the new files.
* gettext-tools/src/Makefile.am (bin_PROGRAMS): Conditionally add 'spit'.
(noinst_SCRIPTS): New variable.
(noinst_HEADERS): Add country-table.h.
(spit_SOURCES, spit_CFLAGS, spit_LDADD, spit_DEPENDENCIES, spit_CPPFLAGS,
spit_LDFLAGS): New variables.
(install-exec-local): Conditionally install spit.py.
(installdirs-local, uninstall-local): Update accordingly.
(DISTCLEANFILES): Add spit.py.
* gettext-tools/po/POTFILES.in: Add spit.c.
* gettext-tools/man/spit.x: New file.
* gettext-tools/man/Makefile.am (man_aux): Add spit.x.
(man_MAN1SRC): Add spit.1.
(man_HTML): Add spit.1.html.
(spit.1, spit.1.html): Add dependencies.
* gettext-tools/doc/gettext.texi (Pretranslating): New chapter.
* gettext-tools/doc/spit.texi: New file.
* gettext-tools/doc/Makefile.am (gettext_TEXINFOS): Add it.
* DEPENDENCIES: Update URLs for libxml2. Add libjson-c, libcurl, Python, the
Python module 'requests'.
* PACKAGING: Mention the 'spit' program and its manual page.
* NEWS: Mention the change.

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@
 /gettext-runtime/doc/Admin/jdom-1.0.jar
 /gettext-runtime/doc/Admin/Matrix*.class
 /gettext-runtime/doc/Admin/matrix.xml
+/gettext-tools/machine-translation/prototype/OllamaSpit.class
 
 # Files brought in by autopull.sh:
 /gettext-tools/tree-sitter-*
@@ -550,6 +551,8 @@
 /gettext-tools/man/msguniq.1.html
 /gettext-tools/man/recode-sr-latin.1
 /gettext-tools/man/recode-sr-latin.1.html
+/gettext-tools/man/spit.1
+/gettext-tools/man/spit.1.html
 /gettext-tools/man/xgettext.1
 /gettext-tools/man/xgettext.1.html
 /gettext-tools/po/gettext-tools.pot
@@ -680,6 +683,7 @@ autom4te.cache/
 /gettext-tools/po/Makefile
 /gettext-tools/projects/Makefile
 /gettext-tools/src/Makefile
+/gettext-tools/src/spit.py
 /gettext-tools/src/user-email
 /gettext-tools/styles/Makefile
 /gettext-tools/system-tests/Makefile
@@ -792,6 +796,8 @@ autom4te.cache/
 /gettext-tools/src/msguniq.exe
 /gettext-tools/src/recode-sr-latin
 /gettext-tools/src/recode-sr-latin.exe
+/gettext-tools/src/spit
+/gettext-tools/src/spit.exe
 /gettext-tools/src/urlget
 /gettext-tools/src/urlget.exe
 /gettext-tools/src/xgettext
