--- a/gettext-tools/man/Makefile.am
+++ b/gettext-tools/man/Makefile.am
@@ -29,6 +29,7 @@ msgcmp.x msgfmt.x msgmerge.x msgunfmt.x xgettext.x \
 msgattrib.x msgcat.x msgcomm.x msgconv.x msgen.x msgexec.x msgfilter.x \
 msggrep.x msginit.x msguniq.x \
 recode-sr-latin.x \
+spit.x \
 gettextize.x autopoint.x
 
 # Likewise.
@@ -37,7 +38,8 @@ man_MAN1SRC = \
 msgcmp.1 msgfmt.1 msgmerge.1 msgunfmt.1 xgettext.1 \
 msgattrib.1 msgcat.1 msgcomm.1 msgconv.1 msgen.1 msgexec.1 msgfilter.1 \
 msggrep.1 msginit.1 msguniq.1 \
-recode-sr-latin.1
+recode-sr-latin.1 \
+spit.1
 man_MAN1WIZARD = \
 gettextize.1
 man_MAN1AUTOTOOLS = \
@@ -50,6 +52,7 @@ msgcmp.1.html msgfmt.1.html msgmerge.1.html msgunfmt.1.html xgettext.1.html \
 msgattrib.1.html msgcat.1.html msgcomm.1.html msgconv.1.html msgen.1.html \
 msgexec.1.html msgfilter.1.html msggrep.1.html msginit.1.html msguniq.1.html \
 recode-sr-latin.1.html \
+spit.1.html \
 gettextize.1.html autopoint.1.html
 
 EXTRA_DIST += help2man $(man_aux) $(man_MANS) $(man_HTML)
@@ -119,6 +122,7 @@ msggrep.1: msggrep.x ../src/msggrep.c
 msginit.1: msginit.x ../src/msginit.c
 msguniq.1: msguniq.x ../src/msguniq.c
 recode-sr-latin.1: recode-sr-latin.x ../src/recode-sr-latin.c
+spit.1: spit.x ../src/spit.c
 
 $(man_MAN1WIZARD): help2man $(top_srcdir)/../.version
 	progname=`echo $@ | sed -e 's/\.in$$//' -e 's/\.1$$//'`; \
@@ -162,6 +166,7 @@ msggrep.1.html: msggrep.1
 msginit.1.html: msginit.1
 msguniq.1.html: msguniq.1
 recode-sr-latin.1.html: recode-sr-latin.1
+spit.1.html: spit.1
 gettextize.1.html: gettextize.1
 autopoint.1.html: autopoint.1
 
