--- a/gettext-tools/po/POTFILES.in
+++ b/gettext-tools/po/POTFILES.in
@@ -83,6 +83,7 @@ src/read-resources.c
 src/read-stringtable.c
 src/read-tcl.c
 src/recode-sr-latin.c
+src/spit.c
 src/urlget.c
 src/write-catalog.c
 src/write-csharp.c
