New program 'msgpre'.
* gettext-tools/src/msgpre.c: New file, based on gettext-tools/src/msgfilter.c.
* gettext-tools/src/FILES: Describe msgpre.c.
* gettext-tools/src/Makefile.am (bin_PROGRAMS): Add msgpre.
(msgpre_SOURCES, msgpre_LDADD, msgpre_DEPENDENCIES, msgpre_CPPFLAGS,
msgpre_LDFLAGS): New variables.
* gettext-tools/po/POTFILES.in: Add msgpre.c.
* gettext-tools/man/msgpre.x: New file.
* gettext-tools/man/Makefile.am (man_aux): Add msgpre.x.
(man_MAN1SRC): Add msgpre.1.
(man_HTML): Add msgpre.1.html.
(msgpre.1, msgpre.1.html): Add dependencies.
* gettext-tools/doc/gettext.texi (msgpre Invocation): New section.
* gettext-tools/doc/msgpre.texi: New file.
* gettext-tools/doc/Makefile.am (gettext_TEXINFOS): Add it.
* gettext-tools/Makefile.am (programs-for-distdir): Create msgpre.
(distdir1, gen-man1): Update for the msgpre.1 manual page.
* NEWS: Mention the new program.

--- a/.gitignore
+++ b/.gitignore
@@ -545,6 +545,8 @@
 /gettext-tools/man/msginit.1.html
 /gettext-tools/man/msgmerge.1
 /gettext-tools/man/msgmerge.1.html
+/gettext-tools/man/msgpre.1
+/gettext-tools/man/msgpre.1.html
 /gettext-tools/man/msgunfmt.1
 /gettext-tools/man/msgunfmt.1.html
 /gettext-tools/man/msguniq.1
@@ -790,6 +792,8 @@ autom4te.cache/
 /gettext-tools/src/msginit.exe
 /gettext-tools/src/msgmerge
 /gettext-tools/src/msgmerge.exe
+/gettext-tools/src/msgpre
+/gettext-tools/src/msgpre.exe
 /gettext-tools/src/msgunfmt
 /gettext-tools/src/msgunfmt.exe
 /gettext-tools/src/msguniq
