--- a/gettext-tools/po/POTFILES.in
+++ b/gettext-tools/po/POTFILES.in
@@ -67,6 +67,7 @@ src/msgl-check.c
 src/msgl-iconv.c
 src/msgl-merge.c
 src/msgmerge.c
+src/msgpre.c
 src/msgunfmt.c
 src/msguniq.c
 src/open-catalog.c
