po-fetch: Add man page.
Reported by Simon Josefsson in
<https://lists.gnu.org/archive/html/bug-gettext/2025-12/msg00030.html>.

* gettext-tools/man/po-fetch.x: New file.
* gettext-tools/man/po-fetch.1.diff: New file.
* gettext-tools/man/Makefile.am (man_aux): Add po-fetch.x.
(man_MAN1MISC): New variable.
(man_MAN1): Include it.
(man_HTML): Add po-fetch.1.html.
($(man_MAN1MISC)): New rule.
(po-fetch.1, po-fetch.1.html): State dependencies.
* PACKAGING: Update.

--- a/.gitignore
+++ b/.gitignore
@@ -551,6 +551,8 @@
 /gettext-tools/man/msgunfmt.1.html
 /gettext-tools/man/msguniq.1
 /gettext-tools/man/msguniq.1.html
+/gettext-tools/man/po-fetch.1
+/gettext-tools/man/po-fetch.1.html
 /gettext-tools/man/recode-sr-latin.1
 /gettext-tools/man/recode-sr-latin.1.html
 /gettext-tools/man/spit.1
