--- a/gettext-tools/man/Makefile.am
+++ b/gettext-tools/man/Makefile.am
@@ -30,7 +30,7 @@ msgattrib.x msgcat.x msgcomm.x msgconv.x msgen.x msgexec.x msgfilter.x \
 msggrep.x msginit.x msgpre.x msguniq.x \
 recode-sr-latin.x \
 spit.x \
-gettextize.x autopoint.x
+gettextize.x autopoint.x po-fetch.x
 
 # Likewise.
 
@@ -44,7 +44,9 @@ man_MAN1WIZARD = \
 gettextize.1
 man_MAN1AUTOTOOLS = \
 autopoint.1
-man_MAN1 = $(man_MAN1SRC) $(man_MAN1WIZARD) $(man_MAN1AUTOTOOLS)
+man_MAN1MISC = \
+po-fetch.1
+man_MAN1 = $(man_MAN1SRC) $(man_MAN1WIZARD) $(man_MAN1AUTOTOOLS) $(man_MAN1MISC)
 man_MANS = $(man_MAN1)
 
 man_HTML = \
@@ -54,9 +56,9 @@ msgexec.1.html msgfilter.1.html msggrep.1.html msginit.1.html msgpre.1.html \
 msguniq.1.html \
 recode-sr-latin.1.html \
 spit.1.html \
-gettextize.1.html autopoint.1.html
+gettextize.1.html autopoint.1.html po-fetch.1.html
 
-EXTRA_DIST += help2man $(man_aux) $(man_MANS) $(man_HTML)
+EXTRA_DIST += help2man $(man_aux) po-fetch.1.diff $(man_MANS) $(man_HTML)
 MAINTAINERCLEANFILES = $(man_MANS) $(man_HTML)
 
 PERL = @PERL@
@@ -140,6 +142,14 @@ $(man_MAN1AUTOTOOLS): help2man $(top_srcdir)/../.version
 
 autopoint.1: autopoint.x ../autotools/autopoint.in
 
+$(man_MAN1MISC): help2man $(top_srcdir)/../.version
+	progname=`echo $@ | sed -e 's/\.in$$//' -e 's/\.1$$//'`; \
+	IN_HELP2MAN=1 $(SHELL) x-to-1 $(UPDATEMODE) "$(PERL)" "$(HELP2MAN)" \
+	  ../misc/$${progname} $(srcdir)/$${progname}.x $@
+	patch $@ < $(srcdir)/po-fetch.1.diff
+
+po-fetch.1: po-fetch.x ../misc/po-fetch.in po-fetch.1.diff
+
 
 # Man pages in HTML format.
 
@@ -172,6 +182,7 @@ recode-sr-latin.1.html: recode-sr-latin.1
 spit.1.html: spit.1
 gettextize.1.html: gettextize.1
 autopoint.1.html: autopoint.1
+po-fetch.1.html: po-fetch.1
 
 install-html-local:
 	$(MKDIR_P) $(DESTDIR)$(htmldir)
