po-fetch: Clarify the directory.
Reported by Simon Josefsson in
<https://lists.gnu.org/archive/html/bug-gettext/2025-12/msg00030.html>.

* gettext-tools/misc/po-fetch.in (func_usage): Mention the output files
location.
* gettext-tools/doc/po-fetch.texi: Likewise.

--- a/gettext-tools/misc/po-fetch.in
+++ b/gettext-tools/misc/po-fetch.in
@@ -95,6 +95,10 @@ The first argument indicates the kind of translation project:
 Options:
       --git      Make changes in the git index, to prepare for a git commit.
 
+Output files location:
+
+The PO files and the LINGUAS file are stored in the current directory.
+
 Informative output:
 
       --help     Show this help text.
