--- a/libtextstyle/install-tests/Makefile.am
+++ b/libtextstyle/install-tests/Makefile.am
@@ -1,5 +1,5 @@
 ## Makefile for libtextstyle/install-tests.
-## Copyright (C) 2025 Free Software Foundation, Inc.
+## Copyright (C) 2025-2026 Free Software Foundation, Inc.
 ##
 ## This program is free software: you can redistribute it and/or modify
 ## it under the terms of the GNU General Public License as published by
@@ -20,14 +20,14 @@ installcheck-local:
 	$(CC) -I$(includedir) -L$(libdir) \
 	      $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) \
 	      $(AM_CFLAGS) $(CFLAGS) $(AM_LDFLAGS) $(LDFLAGS) \
-	      -o test-version $(srcdir)/test-version.c -ltextstyle
+	      -o test-version $(srcdir)/test-version.c $(INSTALLED_LIBTEXTSTYLE)
 	@AUGMENT_SHLIBPATH@ ./test-version
 	rm -rf test-version test-version$(EXEEXT)
 	$(CC) -I$(includedir) -L$(libdir) \
 	      $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) \
 	      -DTOP_SRCDIR=\"$(top_srcdir)/\" \
 	      $(AM_CFLAGS) $(CFLAGS) $(AM_LDFLAGS) $(LDFLAGS) \
-	      -o test-api $(srcdir)/test-api.c -ltextstyle
+	      -o test-api $(srcdir)/test-api.c $(INSTALLED_LIBTEXTSTYLE)
 	@AUGMENT_SHLIBPATH@ ./test-api
 	rm -rf test-api test-api$(EXEEXT)
 
