Update email address in copyright notices.

--- a/gettext-runtime/man/bind_textdomain_codeset.3.in
+++ b/gettext-runtime/man/bind_textdomain_codeset.3.in
@@ -1,4 +1,4 @@
-.\" Copyright (c) Bruno Haible <haible@clisp.cons.org>
+.\" Copyright (c) Bruno Haible <bruno@clisp.org>
 .\"
 .\" This is free documentation; you can redistribute it and/or
 .\" modify it under the terms of the GNU General Public License as
