--- a/gettext-runtime/src/gettext.sh.in
+++ b/gettext-runtime/src/gettext.sh.in
@@ -66,7 +66,7 @@ if test -z "${ZSH_VERSION+set}"; then
 License GPLv2+: GNU GPL version 2 or later <https://gnu.org/licenses/gpl.html>
 This is free software: you are free to change and redistribute it.
 There is NO WARRANTY, to the extent permitted by law."
-        echo "Written by" "Bruno Haible"
+        printf 'Written by %s.\n' "Bruno Haible"
       }
       if test $# = 1; then
         case "$1" in
