--- a/gettext-tools/autotools/convert-archive.in
+++ b/gettext-tools/autotools/convert-archive.in
@@ -52,7 +52,7 @@ func_version ()
 License GPLv3+: GNU GPL version 3 or later <https://gnu.org/licenses/gpl.html>
 This is free software: you are free to change and redistribute it.
 There is NO WARRANTY, to the extent permitted by law."
-  echo "Written by" "Bruno Haible"
+  printf 'Written by %s.\n' "Bruno Haible"
 }
 
 # func_fatal_error message
