--- a/gettext-tools/wizard/gettextize.in
+++ b/gettext-tools/wizard/gettextize.in
@@ -211,7 +211,7 @@ func_version ()
 License GPLv3+: GNU GPL version 3 or later <https://gnu.org/licenses/gpl.html>
 This is free software: you are free to change and redistribute it.
 There is NO WARRANTY, to the extent permitted by law."
-  echo "Written by" "Ulrich Drepper"
+  printf 'Written by %s and %s.\n' "Ulrich Drepper" "Bruno Haible"
 }
 
 # func_fatal_error message
