po: Distribute the fetch-po file.
This is somewhat tricky, because it is also a phony Makefile target.

* gettext-tools/wizard/po-templates/traditional/Makefile.in.in (dist2):
Distribute 'fetch-po'.
* gettext-tools/examples/po/Makefile.am (distdir1): Distribute 'fetch-po'.
* gettext-tools/examples/hello-*/po/Makefile.am (distdir1): Likewise.

--- a/gettext-tools/examples/hello-c++-wxwidgets/po/Makefile.am
+++ b/gettext-tools/examples/hello-c++-wxwidgets/po/Makefile.am
@@ -432,6 +432,10 @@ EXTRA_DIST = remove-potcdate.sed LINGUAS $(POFILES) $(GMOFILES)
 distdir1:
 	$(MAKE) update-po
 	$(MAKE) $(srcdir)/stamp-po
+	@for file in fetch-po; do \
+	  if test -f $$file; then d=.; else d=$(srcdir); fi; \
+	  cp -p $$d/$$file $(distdir)/$$file || exit 1; \
+	done
 	@if test -f $(srcdir)/$(DOMAIN).pot; then \
 	  for file in $(DOMAIN).pot stamp-po; do \
 	    if test -f $$file; then d=.; else d=$(srcdir); fi; \
