--- a/gettext-tools/wizard/po-templates/traditional/Makefile.in.in
+++ b/gettext-tools/wizard/po-templates/traditional/Makefile.in.in
@@ -492,7 +492,7 @@ dist distdir:
 	@$(MAKE) dist2
 # This is a separate target because 'update-po' must be executed before.
 dist2: $(srcdir)/stamp-po $(DISTFILES)
-	@dists="$(DISTFILES)"; \
+	@dists="$(DISTFILES) fetch-po"; \
 	if test -f $(srcdir)/$(DOMAIN).pot; then \
 	  dists="$$dists $(DOMAIN).pot stamp-po"; \
 	else \
