--- a/libtextstyle/.gitignore
+++ b/libtextstyle/.gitignore
@@ -245,7 +245,7 @@
 /lib/stpcpy.c
 /lib/str_endswith.c
 /lib/str_startswith.c
-/lib/streq.h
+/lib/streq-opt.h
 /lib/strerror.c
 /lib/strerror-override.c
 /lib/strerror-override.h
